# ppx_ibad

./: .gitignore  .ocamlformat  dune-project  ppx_ibad.opam
lib/: dune  ppx_ibad.ml
rewriter/: dune  ppx_ibad.ml
